@@ -1,25 +1,17 @@
 package com.al3x.housing2.Condition.Conditions;
 
-import com.al3x.housing2.Action.ActionEditor;
 import com.al3x.housing2.Action.ActionExecutor;
 import com.al3x.housing2.Action.OutputType;
 import com.al3x.housing2.Action.Properties.EnumProperty;
 import com.al3x.housing2.Action.Properties.IntegerProperty;
 import com.al3x.housing2.Action.Properties.ItemStackProperty;
+import com.al3x.housing2.Action.Properties.SlotProperty;
 import com.al3x.housing2.Condition.Condition;
 import com.al3x.housing2.Condition.ConditionEnum;
 import com.al3x.housing2.Enums.EnumMaterial;
 import com.al3x.housing2.Events.CancellableEvent;
 import com.al3x.housing2.Instances.HousingWorld;
-import com.al3x.housing2.Main;
-import com.al3x.housing2.Menus.Menu;
-import com.al3x.housing2.Menus.SlotSelectMenu;
-import com.al3x.housing2.Utils.ItemBuilder;
 import com.al3x.housing2.Utils.Serialization;
-import com.al3x.housing2.Utils.StackUtils;
-import com.al3x.housing2.Utils.StringUtilsKt;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
@@ -36,9 +28,10 @@ public class HasItemCondition extends Condition {
                 "Has Item",
                 "Requires the user to have the specified item.",
                 Material.CHEST,
-                List.of()); // it doesn't have a ptsl prefix?
+                List.of("hasItem")
+        );
 
-        getProperties().addAll(List.of(
+        getProperties().addAll(Arrays.asList(
                 new ItemStackProperty(
                         "item",
                         "Item",
@@ -47,7 +40,7 @@ public class HasItemCondition extends Condition {
                 new EnumProperty<>(
                         "whatToCheck",
                         "What to check",
-                        "What should be checked on the item.",
+                        "What to check for.",
                         WhatToCheck.class
                 ).setValue(WhatToCheck.METADATA),
                 new EnumProperty<>(
@@ -56,48 +49,55 @@ public class HasItemCondition extends Condition {
                         "Where to check for the item.",
                         WhereToCheck.class
                 ).setValue(WhereToCheck.ANYWHERE),
+                new SlotProperty(
+                        "customSlot",
+                        "Slot",
+                        "The slot to check for the item."
+                ).setValue(-1).showIf(() -> getValue("whereToCheck", WhereToCheck.class) == WhereToCheck.CUSTOM),
                 new EnumProperty<>(
                         "amountCondition",
                         "Amount Condition",
-                        "The comparator to use for the item amount.",
+                        "The condition for the amount of items.",
                         Amount.class
                 ).setValue(Amount.ANY_AMOUNT),
                 new IntegerProperty(
                         "amount",
                         "Amount",
-                        "The amount of the item."
+                        "The amount of items to check for."
                 ).setValue(1)
         ));
     }
 
     @Override
     public OutputType execute(Player player, HousingWorld house, CancellableEvent event, ActionExecutor executor) {
-        int amount = getValue("amount", IntegerProperty.class).getValue();
-        if (getValue("item", ItemStackProperty.class).getValue() == null) return OutputType.ERROR;
+        ItemStack item = getProperty("item", ItemStackProperty.class).getValue();
+        if (item == null) return OutputType.FALSE;
+        int amount = getValue("amount", Integer.class);
         switch (getValue("whereToCheck", WhereToCheck.class)) {
-            /* case CUSTOM: {
-                if (customSlot == -1) return OutputType.ERROR;
+            case CUSTOM: {
+                int customSlot = getValue("customSlot", Integer.class);
+                if (customSlot == -1) return OutputType.FALSE;
                 if (checkItem(player.getInventory().getItem(customSlot))) {
                     return checkAmount(player.getInventory().getItem(customSlot), amount);
                 }
                 break;
-            } */
+            }
             case HAND: {
                 if (checkItem(player.getInventory().getItemInMainHand())) {
-                    return checkAmount(player.getInventory().getItemInMainHand(), amount) ? OutputType.SUCCESS : OutputType.ERROR;
+                    return checkAmount(player.getInventory().getItemInMainHand(), amount);
                 }
                 break;
             }
             case OFFHAND: {
                 if (checkItem(player.getInventory().getItemInOffHand())) {
-                    return checkAmount(player.getInventory().getItemInOffHand(), amount) ? OutputType.SUCCESS : OutputType.ERROR;
+                    return checkAmount(player.getInventory().getItemInOffHand(), amount);
                 }
                 break;
             }
             case ARMOR: {
                 for (ItemStack armor : player.getInventory().getArmorContents()) {
                     if (checkItem(armor)) {
-                        return checkAmount(armor, amount) ? OutputType.SUCCESS : OutputType.ERROR;
+                        return checkAmount(armor, amount);
                     }
                 }
                 break;
@@ -105,7 +105,7 @@ public class HasItemCondition extends Condition {
             case HOTBAR: {
                 for (int i = 0; i < 9; i++) {
                     if (checkItem(player.getInventory().getItem(i))) {
-                        return checkAmount(player.getInventory().getItem(i), amount) ? OutputType.SUCCESS : OutputType.ERROR;
+                        return checkAmount(player.getInventory().getItem(i), amount);
                     }
                 }
                 break;
@@ -113,7 +113,7 @@ public class HasItemCondition extends Condition {
             case INVENTORY: {
                 for (ItemStack inventory : player.getInventory().getContents()) {
                     if (checkItem(inventory)) {
-                        return checkAmount(inventory, amount) ? OutputType.SUCCESS : OutputType.ERROR;
+                        return checkAmount(inventory, amount);
                     }
                 }
                 break;
@@ -121,35 +121,35 @@ public class HasItemCondition extends Condition {
             case ANYWHERE: {
                 for (ItemStack inventory : player.getInventory().getContents()) {
                     if (checkItem(inventory)) {
-                        return checkAmount(inventory, amount) ? OutputType.SUCCESS : OutputType.ERROR;
+                        return checkAmount(inventory, amount);
                     }
                 }
                 for (ItemStack armor : player.getInventory().getArmorContents()) {
                     if (checkItem(armor)) {
-                        return checkAmount(armor, amount) ? OutputType.SUCCESS : OutputType.ERROR;
+                        return checkAmount(armor, amount);
                     }
                 }
                 for (int i = 0; i < 9; i++) {
                     if (checkItem(player.getInventory().getItem(i))) {
-                        return checkAmount(player.getInventory().getItem(i), amount) ? OutputType.SUCCESS : OutputType.ERROR;
+                        return checkAmount(player.getInventory().getItem(i), amount);
                     }
                 }
                 if (checkItem(player.getInventory().getItemInMainHand())) {
-                    return checkAmount(player.getInventory().getItemInMainHand(), amount) ? OutputType.SUCCESS : OutputType.ERROR;
+                    return checkAmount(player.getInventory().getItemInMainHand(), amount);
                 }
                 if (checkItem(player.getInventory().getItemInOffHand())) {
-                    return checkAmount(player.getInventory().getItemInOffHand(), amount) ? OutputType.SUCCESS : OutputType.ERROR;
+                    return checkAmount(player.getInventory().getItemInOffHand(), amount);
                 }
                 break;
             }
         }
-        return OutputType.ERROR;
+        return OutputType.FALSE;
     }
 
     private boolean checkItem(ItemStack item) {
         if (item == null) return false;
-        ItemStack thisItem = getValue("item", ItemStackProperty.class).getValue();
         WhatToCheck whatToCheck = getValue("whatToCheck", WhatToCheck.class);
+        ItemStack thisItem = getProperty("item", ItemStackProperty.class).getValue();
         if (whatToCheck == WhatToCheck.ITEM_TYPE) {
             return item.getType() == thisItem.getType();
         } else if (whatToCheck == WhatToCheck.METADATA) {
@@ -158,28 +158,16 @@ public class HasItemCondition extends Condition {
         return false;
     }
 
-    private boolean checkAmount(ItemStack item, int amount) {
-        switch (getValue("amountCondition", Amount.class)) {
-            case ANY_AMOUNT: {
-                return true;
-            }
-            case LESS: {
-                return item.getAmount() < amount;
-            }
-            case GREATER: {
-                return item.getAmount() > amount;
-            }
-            case EQUAL: {
-                return item.getAmount() == amount;
-            }
-            case GREATER_OR_EQUAL: {
-                return item.getAmount() >= amount;
-            }
-            case LESS_OR_EQUAL: {
-                return item.getAmount() <= amount;
-            }
-        }
-        return false;
+    private OutputType checkAmount(ItemStack item, int amount) {
+        boolean output = switch (getValue("amountCondition", Amount.class)) {
+            case ANY_AMOUNT -> true;
+            case LESS -> item.getAmount() < amount;
+            case GREATER -> item.getAmount() > amount;
+            case EQUAL -> item.getAmount() == amount;
+            case GREATER_OR_EQUAL -> item.getAmount() >= amount;
+            case LESS_OR_EQUAL -> item.getAmount() <= amount;
+        };
+        return output ? OutputType.TRUE : OutputType.FALSE;
     }
 
     @Override
@@ -189,10 +177,10 @@ public class HasItemCondition extends Condition {
 
     private enum WhatToCheck implements EnumMaterial {
         ITEM_TYPE(Material.MAP),
-        METADATA(Material.FILLED_MAP)
-        ;
+        METADATA(Material.FILLED_MAP);
 
         private Material material;
+
         WhatToCheck(Material material) {
             this.material = material;
         }
@@ -210,10 +198,10 @@ public class HasItemCondition extends Condition {
         HOTBAR(Material.PAPER),
         INVENTORY(Material.CHEST),
         ANYWHERE(Material.NETHER_STAR),
-        /* CUSTOM(Material.BOOK) */
-        ;
+        CUSTOM(Material.BOOK);
 
         private Material material;
+
         WhereToCheck(Material material) {
             this.material = material;
         }
@@ -230,10 +218,10 @@ public class HasItemCondition extends Condition {
         GREATER(Material.LIME_STAINED_GLASS),
         EQUAL(Material.YELLOW_STAINED_GLASS),
         GREATER_OR_EQUAL(Material.LIME_STAINED_GLASS),
-        LESS_OR_EQUAL(Material.RED_STAINED_GLASS)
-        ;
+        LESS_OR_EQUAL(Material.RED_STAINED_GLASS);
 
         private Material material;
+
         Amount(Material material) {
             this.material = material;
         }
